inclusao de tags

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="pt-Br">
 
 <h1>Sapatilhas de Ballet</h1>
 
@@ -5,3 +7,4 @@
   
 <p>Para as sapatilhas de ponta também encontramos muitos modelos de várias marcas, porem cada pessoa tem um tipo de pé, que podem ser classificados entre: Cavo, plano, grego, egípcio, romano, alemão, céltico. A escolha da sapatilha depende do tempo que a bailarina faz aulas, o quanto o seu pé já está fortalecido. No entanto analisar o tipo do pé da bailarina é algo fundamental para a escolha da sua sapatilha. </p>
 
+</html>
