--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
 
+<head>
+   <meta charset="UTF-8">
+   <title>Sapatilhas de Ballet</title>
+
+
+</head>
+<body>
 <h1>Sapatilhas de Ballet</h1>
 
 <p>As sapatilhas estão divididas entre sapatilha de meia ponta e sapatilha de ponta e entre estas, temos vários modelos destinas a pês diferentes. Para os anos iniciais é utilizado as sapatilhas de meia ponta. Elas são encontradas em vários modelos pertencentes a diversas marcas. Destacando conforto, beleza e desempenho. </p>
   
 <p>Para as sapatilhas de ponta também encontramos muitos modelos de várias marcas, porem cada pessoa tem um tipo de pé, que podem ser classificados entre: Cavo, plano, grego, egípcio, romano, alemão, céltico. A escolha da sapatilha depende do tempo que a bailarina faz aulas, o quanto o seu pé já está fortalecido. No entanto analisar o tipo do pé da bailarina é algo fundamental para a escolha da sua sapatilha. </p>
-
+</body>
+</html>
